Addition of actives page
TODO: Fix loading of page.

--- a/index.html
+++ b/index.html
@@ -31,6 +31,7 @@
 								<li><a href="#standards">Standards</a></li>
 								<li><a href="#about">About</a></li>
 								<li><a href="#contact">Contact</a></li>
+								<li><a href="actives.html">Actives</a></li>
 								<!--<li><a href="#elements">Elements</a></li>-->
 							</ul>
 						</nav>
@@ -94,6 +95,7 @@
 									<li><a href="https://www.instagram.com/triangleutah/" class="icon fa-instagram"><span class="label">Instagram</span></a></li>
 								</ul>
 							</article>
+
 
 						<!-- Elements -->
 							<article id="elements">
