--- a/actives.html
+++ b/actives.html
@@ -1,18 +1,41 @@
 <!DOCTYPE HTML>
+<!--
+	Dimension by HTML5 UP
+	html5up.net | @ajlkn
+	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+-->
 <html>
-<head>
-  <title>Actives</title>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
-  <link rel="stylesheet" href="assets/css/actives.css" />
-  <noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
-</head>
-<body>
-    <h1>Heelo teehee</h1>
+	<head>
+		<title>Utah Triangle</title>
+		<meta charset="utf-8" />
+		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
+		<link rel="stylesheet" href="assets/css/actives.css" />
+		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
+	</head>
+	<body class="is-preload">
 
+		<!-- Wrapper -->
+			<div id="wrapper">
+        <header id="header">
+          <div class="content">
+            <div class="inner">
+              <h1>Actives</h1>
+            </div>
+          </div>
+        </header>
+				<!-- Main -->
+					<div id="main">
+					</div>
 
-    <!-- BG -->
-			<div id="bg"></div>
+				<!-- Footer -->
+					<footer id="footer">
+						<p class="copyright">&copy; UtahTriangle</p>
+					</footer>
+
+			</div>
+
+		<!-- BG -->
+    <div id="bg"></div>
 
 		<!-- Scripts -->
 			<script src="assets/js/jquery.min.js"></script>
@@ -21,10 +44,5 @@
 			<script src="assets/js/util.js"></script>
 			<script src="assets/js/main.js"></script>
 
-    <!-- Footer -->
-      <footer id="footer">
-        <p class="copyright">&copy; UtahTriangle</p>
-      </footer>
-</body>
-
+	</body>
 </html>
